dibs-sql/tests/snapshots/snapshots__delete_no_returning.snap
---
source: crates/dibs-sql/tests/snapshots.rs
expression: result.sql
---
DELETE FROM "products" WHERE "deleted_at" IS NOT NULL
