dibs-sql/tests/snapshots/snapshots__delete_simple.snap
---
source: crates/dibs-sql/tests/snapshots.rs
expression: result.sql
---
DELETE FROM "products" WHERE "id" = $1 RETURNING "id", "handle"
