dibs-sql/tests/snapshots/snapshots__ilike_search.snap
---
source: crates/dibs-sql/tests/snapshots.rs
expression: result.sql
---
SELECT "id", "handle" FROM "products" WHERE "handle" ILIKE $1 ORDER BY "handle" ASC LIMIT $2
