dibs-sql/tests/snapshots/snapshots__insert_with_default.snap
---
source: crates/dibs-sql/tests/snapshots.rs
expression: result.sql
---
INSERT INTO "products" ("handle", "status", "created_at") VALUES ($1, DEFAULT, NOW()) RETURNING "id"
