dibs-sql/tests/snapshots/snapshots__pretty_insert.snap
---
source: crates/dibs-sql/tests/snapshots.rs
expression: result.sql
---
INSERT INTO "products" ("handle", "status", "created_at")
VALUES ($1, $2, NOW())
RETURNING "id", "handle", "status"
