dibs-sql/tests/snapshots/snapshots__select_with_params.snap
---
source: crates/dibs-sql/tests/snapshots.rs
expression: result.sql
---
SELECT "id", "handle", "status" FROM "products" WHERE "handle" = $1 AND "status" = $2
