dibs-sql/tests/snapshots/snapshots__simple_select.snap
---
source: crates/dibs-sql/tests/snapshots.rs
expression: result.sql
---
SELECT "id", "name", "email" FROM "users"
